Changes between nazghul-0.1.2 and nazghul-0.1.3

gmcnutt:

--Bugfix: field effects never worked outside of combat. Added support for
  them. Also modified the main game loop so that the player cannot give
  commands until somebody in the party is not asleep. If everyone is sleeping
  then the player has to wait until at least one party member wakes up.

--Bugfix: chests created via the load file (as opposed to chests created as
  corpse loot) were causing a seg fault when the player tried to open them. The
  problem is that they were being created as generic Objects, and not as
  specific Container Objects, so they didn't really support the open command. I
  don't plan on making a good solution for this until the 0.3.x series, but for
  now I added a hack to make it work and keep Sam happy :-)

--Bugfix: cursor was being shaded according to lighting conditions, but it
  should always be bright and clearly visible. I fixed this by changing the way
  the cursor is rendered so that now it is simply accepted as a special
  case. This allowed me to remove one or two unsightly hacks in the process.

--Bugfix: if you zoomed in while sailing the vehicle map was oriented
  wrong. This was because zoom-in is handled by combat and combat always
  rotated the vehicle maps so that ships were broadside to one another. I fixed
  this by adding a check to see if an opponent was specified and, if not, then
  I don't rotate for broadside. This is still something of a hack because not
  all vehicles will require a broadside in combat, so this behaviour assumes a
  ship vehicle. We could add a flag to the vehicle definition which species
  wether or not to do this, but currently nothing would take advantage of it
  and by the time we create something that does we might think of a better way
  to solve the problem.


Changes 2003/06/25
sglasby:
-- Implemented a terrain- and palette-saving command (^S)ave Map.

   The command is bound to CONTROL-S, and writes the current 