@@ -53,7 +53,7 @@ MAP m_wilderness {
     "_-....{{{{{^^^^{{~--{{{^^^^{{{tt......-_";  // 15
     "_-....{^^^^^^^^{~~~-^^^^{{{{ttt......--_";  // 16
     "_-....{{{{^~~~~^~{{^^^{{{{ttt.......--__";  // 17
-    "--.......{{~^^~~~{{^{{ttttt.........--__";  // 18
+    "--.......{{~^^~~~{^^{{ttttt.........--__";  // 18
     "tttttt.ttt~~{{^^^{^^{{tt....ttttttttt---";  // 19
     "||||tt..~~~t.{{{^^^{{{{tt..tt||||ttttt~t";  // 20
     "|||||tt.==.....{{{^^^^{{t..t||||||tttt~~";  // 21
